--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
