--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -10,12 +10,14 @@
     "@points/shared": "file:../Shared.Points",
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
+    "native-base": "^2.5.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
