--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "tslint -c tslint.json 'app/**/*.ts{,x}' --project tsconfig.json"
   },
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
