--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -15,6 +15,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
@@ -31,6 +32,7 @@
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
     "@types/react-native-loading-spinner-overlay": "^0.5.0",
+    "@types/react-native-scrollable-tab-view": "^0.8.1",
     "@types/react-navigation": "^2.0.6",
     "@types/react-redux": "^6.0.1",
     "@types/react-router": "^4.0.26",
