--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "native-base": "^2.5.2",
     "react": "16.3.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^22.2.3",
+    "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.109",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
