--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "native-base": "^2.5.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
@@ -34,6 +35,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.109",
     "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.6",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
     "@types/react-native-loading-spinner-overlay": "^0.5.0",
