--- a/Native.Points/android/settings.gradle
+++ b/Native.Points/android/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'points'
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 
 include ':app'
