--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -17,6 +17,7 @@
     "native-base": "^2.5.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-image-picker": "^0.26.7",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.5.0",
     "react-native-scrollable-tab-view": "^0.8.0",
