--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -18,6 +18,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-image-picker": "^0.26.7",
+    "react-native-interactive-image-gallery": "^0.1.2",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.5.0",
     "react-native-scrollable-tab-view": "^0.8.0",
@@ -50,6 +51,7 @@
     "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
     "babel-jest": "23.0.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.1.0",
     "react-native-typescript-transformer": "^1.2.9",
