--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
     "axios": "^0.18.0",
+    "formik": "^0.11.11",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
@@ -30,7 +31,8 @@
     "redux-saga": "^0.16.0",
     "redux-watch": "^1.1.1",
     "reselect": "^3.0.1",
-    "rxjs": "^6.2.1"
+    "rxjs": "^6.2.1",
+    "yup": "^0.25.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -50,6 +52,7 @@
     "@types/react-test-renderer": "^16.0.1",
     "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
+    "@types/yup": "^0.24.7",
     "babel-jest": "23.0.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react-native": "4.0.0",
