--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "class-validator": "^0.8.5",
     "formik": "^0.11.11",
+    "formik-observer": "^1.0.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
