--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -19,6 +19,7 @@
     "moment-timezone": "^0.5.21",
     "native-base": "^2.5.2",
     "react": "16.3.1",
+    "react-addons-update": "^15.6.2",
     "react-native": "0.55.4",
     "react-native-image-picker": "^0.26.7",
     "react-native-interactive-image-gallery": "^0.1.2",
@@ -44,6 +45,7 @@
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.6",
     "@types/react": "^16.3.14",
+    "@types/react-addons-update": "^0.14.19",
     "@types/react-native": "^0.55.16",
     "@types/react-native-loading-spinner-overlay": "^0.5.0",
     "@types/react-native-modalbox": "^1.4.6",
