--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -28,7 +28,9 @@
     "bcrypt": "^2.0.1",
     "class-transformer": "^0.1.7",
     "class-validator": "^0.8.1",
+    "gm": "^1.23.1",
     "helmet": "^3.12.1",
+    "image-size": "^0.6.3",
     "is-image-filename": "^1.0.0",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.0",
@@ -42,6 +44,8 @@
     "typescript": "^2.8.0"
   },
   "devDependencies": {
+    "@types/gm": "^1.18.0",
+    "@types/image-size": "0.0.29",
     "@types/jest": "^20.0.8",
     "@types/mongoose": "^5.0.13",
     "@types/multer": "^1.3.6",
