--- a/Native.Points/android/app/build.gradle
+++ b/Native.Points/android/app/build.gradle
@@ -153,6 +153,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-vector-icons')
     compile project(':react-native-image-picker')
+    compile project(':react-native-photo-view')
 }
 
 // Run this once to be able to run the application with BUCK
