--- a/Native.Points/android/settings.gradle
+++ b/Native.Points/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'points'
+include ':react-native-photo-view'
+project(':react-native-photo-view').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-photo-view/android')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 include ':react-native-image-picker'
