--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -47,6 +47,7 @@
     "@types/gm": "^1.18.0",
     "@types/image-size": "0.0.29",
     "@types/jest": "^20.0.8",
+    "@types/lodash": "^4.14.112",
     "@types/mongoose": "^5.0.13",
     "@types/multer": "^1.3.6",
     "@types/node": "^7.0.41",
