--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -24,6 +24,7 @@
     "react-native-image-picker": "^0.26.7",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.5.0",
+    "react-native-permissions": "^1.1.1",
     "react-native-photo-gallery": "^0.1.10",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-timeline-listview": "^0.2.3",
@@ -49,6 +50,7 @@
     "@types/react-native": "^0.55.16",
     "@types/react-native-loading-spinner-overlay": "^0.5.0",
     "@types/react-native-modalbox": "^1.4.6",
+    "@types/react-native-permissions": "^1.1.1",
     "@types/react-native-scrollable-tab-view": "^0.8.1",
     "@types/react-navigation": "^2.0.6",
     "@types/react-redux": "^6.0.1",
