--- a/Native.Points/android/app/build.gradle
+++ b/Native.Points/android/app/build.gradle
@@ -77,6 +77,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-sentry/sentry.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -154,6 +155,7 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-image-picker')
     compile project(':react-native-photo-view')
+    compile project(':react-native-sentry')
 }
 
 // Run this once to be able to run the application with BUCK
