--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -25,7 +25,7 @@
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.5.0",
     "react-native-permissions": "^1.1.1",
-    "react-native-photo-gallery": "^0.1.10",
+    "react-native-photo-view": "^1.5.2",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-sentry": "^0.38.2",
     "react-native-timeline-listview": "^0.2.3",
