--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -17,10 +17,10 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
-    "native-base": "^2.5.2",
-    "react": "16.4.1",
+    "native-base": "^2.7",
+    "react": "^16.4.1",
     "react-addons-update": "^15.6.2",
-    "react-native": "0.56.0",
+    "react-native": "^0.56.0",
     "react-native-image-picker": "^0.26.7",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.5.0",
@@ -61,14 +61,13 @@
     "@types/reselect": "^2.2.0",
     "@types/yup": "^0.24.7",
     "babel-jest": "23.0.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react-native": "^5.0.1",
+    "babel-preset-react-native": "^5",
     "jest": "23.1.0",
     "metro": "^0.43.4",
     "react-native-config": "^0.11.5",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.3.1",
-    "typescript": "^2.9.1"
+    "typescript": "^3.0.1"
   },
   "jest": {
     "preset": "react-native"
