--- a/Native.Points/ios/points.xcodeproj/xcshareddata/xcschemes/points-tvOS.xcscheme
+++ b/Native.Points/ios/points.xcodeproj/xcshareddata/xcschemes/points-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0820"
+   LastUpgradeVersion = "0940"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "points-tvOS.app"
-               BlueprintName = "points-tvOS"
-               ReferencedContainer = "container:points.xcodeproj">
+               BuildableName = "Points-tvOS.app"
+               BlueprintName = "Points-tvOS"
+               ReferencedContainer = "container:Points.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,17 +43,17 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "points-tvOSTests.xctest"
-               BlueprintName = "points-tvOSTests"
-               ReferencedContainer = "container:points.xcodeproj">
+               BuildableName = "Points-tvOSTests.xctest"
+               BlueprintName = "Points-tvOSTests"
+               ReferencedContainer = "container:Points.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
-      selectedIdentifier = "Xcode.Foundation..LLDB"
-      selectedLauncherIdentifier = "Xcode.Foundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "points-tvOSTests.xctest"
-               BlueprintName = "points-tvOSTests"
-               ReferencedContainer = "container:points.xcodeproj">
+               BuildableName = "Points-tvOSTests.xctest"
+               BlueprintName = "Points-tvOSTests"
+               ReferencedContainer = "container:Points.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "points-tvOS.app"
-            BlueprintName = "points-tvOS"
-            ReferencedContainer = "container:points.xcodeproj">
+            BuildableName = "Points-tvOS.app"
+            BlueprintName = "Points-tvOS"
+            ReferencedContainer = "container:Points.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -81,8 +81,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedIdentifier = "Xcode.Foundation..LLDB"
-      selectedLauncherIdentifier = "Xcode.Foundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "points-tvOS.app"
-            BlueprintName = "points-tvOS"
-            ReferencedContainer = "container:points.xcodeproj">
+            BuildableName = "Points-tvOS.app"
+            BlueprintName = "Points-tvOS"
+            ReferencedContainer = "container:Points.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "points-tvOS.app"
-            BlueprintName = "points-tvOS"
-            ReferencedContainer = "container:points.xcodeproj">
+            BuildableName = "Points-tvOS.app"
+            BlueprintName = "Points-tvOS"
+            ReferencedContainer = "container:Points.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
