--- a/Native.Points/ios/points.xcodeproj/xcshareddata/xcschemes/points.xcscheme
+++ b/Native.Points/ios/points.xcodeproj/xcshareddata/xcschemes/points.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
-   version = "1.8">
+   LastUpgradeVersion = "0940"
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "points.app"
-               BlueprintName = "points"
-               ReferencedContainer = "container:points.xcodeproj">
+               BuildableName = "Points.app"
+               BlueprintName = "Points"
+               ReferencedContainer = "container:Points.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,19 +43,17 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "pointsTests.xctest"
-               BlueprintName = "pointsTests"
-               ReferencedContainer = "container:points.xcodeproj">
+               BuildableName = "PointsTests.xctest"
+               BlueprintName = "PointsTests"
+               ReferencedContainer = "container:Points.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
-      selectedIdentifier = "Xcode.Foundation..LLDB"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.Foundation.Launcher.LLDB"
-      language = ""
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -63,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "pointsTests.xctest"
-               BlueprintName = "pointsTests"
-               ReferencedContainer = "container:points.xcodeproj">
+               BuildableName = "PointsTests.xctest"
+               BlueprintName = "PointsTests"
+               ReferencedContainer = "container:Points.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -73,20 +71,18 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "points.app"
-            BlueprintName = "points"
-            ReferencedContainer = "container:points.xcodeproj">
+            BuildableName = "Points.app"
+            BlueprintName = "Points"
+            ReferencedContainer = "container:Points.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
-      selectedIdentifier = "Xcode.Foundation..LLDB"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -98,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "points.app"
-            BlueprintName = "points"
-            ReferencedContainer = "container:points.xcodeproj">
+            BuildableName = "Points.app"
+            BlueprintName = "Points"
+            ReferencedContainer = "container:Points.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -117,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "points.app"
-            BlueprintName = "points"
-            ReferencedContainer = "container:points.xcodeproj">
+            BuildableName = "Points.app"
+            BlueprintName = "Points"
+            ReferencedContainer = "container:Points.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
