--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "lint": "tslint --project tsconfig.json"
+    "test": "jest"
   },
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
+    "react": "16.4.1",
+    "react-native": "0.57.0-rc.3",
     "axios": "^0.18.0",
     "class-validator": "^0.8.5",
     "formik": "^0.11.11",
@@ -18,9 +19,7 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "native-base": "^2.7",
-    "react": "^16.4.1",
     "react-addons-update": "^15.6.2",
-    "react-native": "0.57.0-rc.2",
     "react-native-image-picker": "^0.26.7",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.5.0",
@@ -37,15 +36,18 @@
     "redux-watch": "^1.1.1",
     "reselect": "^3.0.1",
     "rxjs": "^6.2.1",
-    "yup": "^0.25.1"
+    "yup": "^0.26.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jest": "^23.3.1",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.109",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.6",
+    "@types/react": "^16.4.12",
     "@types/react-addons-update": "^0.14.19",
+    "@types/react-native": "^0.56.15",
     "@types/react-native-loading-spinner-overlay": "^0.5.0",
     "@types/react-native-modalbox": "^1.4.6",
     "@types/react-native-permissions": "^1.1.1",
@@ -53,23 +55,34 @@
     "@types/react-navigation": "^2.0.6",
     "@types/react-redux": "^6.0.1",
     "@types/react-router": "^4.0.26",
+    "@types/react-test-renderer": "^16.0.2",
     "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
     "@types/yup": "^0.24.7",
-    "react-native-config": "^0.11.5",
-    "@types/jest": "^23.3.1",
-    "@types/react": "^16.4.11",
-    "@types/react-native": "^0.56.11",
-    "@types/react-test-renderer": "^16.0.2",
     "babel-jest": "23.4.2",
-    "babel-preset-react-native": "5",
     "jest": "23.5.0",
-    "react-native-typescript-transformer": "^1.2.10",
+    "metro-react-native-babel-preset": "0.43.5",
+    "react-native-config": "^0.11.5",
     "react-test-renderer": "16.4.1",
     "ts-jest": "^23.1.4",
     "typescript": "^3.0.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "modulePaths": [
+      "<rootDir>"
+    ]
   }
 }
