--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "@points/api",
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "description": "API for Points achievement application",
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/main.ts",
@@ -16,34 +16,37 @@
     "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
-    "@nestjs/common": "^5.0.0",
-    "@nestjs/core": "^5.0.0",
-    "@nestjs/microservices": "^5.0.0",
-    "@nestjs/mongoose": "^3.0.1",
-    "@nestjs/passport": "^1.0.10",
-    "@nestjs/testing": "^5.0.0",
-    "@nestjs/websockets": "^5.0.0",
+    "@nestjs/common": "^6.0.1",
+    "@nestjs/core": "^6.0.1",
+    "@nestjs/microservices": "^6.0.1",
+    "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/passport": "^6.1.0",
+    "@nestjs/platform-express": "^6.4.1",
+    "@nestjs/swagger": "^3.0.1",
+    "@nestjs/testing": "^6.0.1",
+    "@nestjs/typeorm": "^6.0.0",
+    "@nestjs/websockets": "^6.0.1",
     "@points/shared": "file:../Shared.Points",
     "accesscontrol": "^2.2.1",
     "bcrypt": "^2.0.1",
-    "class-transformer": "^0.1.7",
-    "class-validator": "^0.8.1",
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "del": "^3.0.0",
     "dotenv": "^6.0.0",
     "gm": "^1.23.1",
     "helmet": "^3.12.1",
     "image-size": "^0.6.3",
     "is-image-filename": "^1.0.0",
-    "jsonwebtoken": "^8.2.1",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.1.0",
     "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.4.0",
     "tamper": "^1.0.0",
-    "typescript": "^2.8.0"
+    "typescript": "^3.3.1"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
